<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <ToggleButton
        android:id="@+id/mainFunnyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/category_toggle"
        android:checked="true"
        android:textColor="@android:color/background_light"
        android:textOff="@string/funny"
        android:textOn="@string/funny"
        app:layout_constraintEnd_toStartOf="@+id/mainSeriousButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/mainSeriousButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/category_toggle"
        android:textColor="@android:color/background_light"
        android:textOff="@string/serious"
        android:textOn="@string/serious"
        app:layout_constraintBottom_toBottomOf="@+id/mainFunnyButton"
        app:layout_constraintEnd_toStartOf="@+id/mainCrazyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainFunnyButton"
        app:layout_constraintTop_toTopOf="@+id/mainFunnyButton" />

    <ToggleButton
        android:id="@+id/mainCrazyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/category_toggle"
        android:textColor="@android:color/background_light"
        android:textOff="@string/crazy"
        android:textOn="@string/crazy"
        app:layout_constraintBottom_toBottomOf="@+id/mainSeriousButton"
        app:layout_constraintEnd_toStartOf="@+id/mainPopularButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainSeriousButton"
        app:layout_constraintTop_toTopOf="@+id/mainSeriousButton" />

    <ToggleButton
        android:id="@+id/mainPopularButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/category_toggle"
        android:textColor="@android:color/background_light"
        android:textOff="@string/popular"
        android:textOn="@string/popular"
        app:layout_constraintBottom_toBottomOf="@+id/mainCrazyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainCrazyButton"
        app:layout_constraintTop_toTopOf="@+id/mainCrazyButton" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/thoughtListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainSeriousButton" />
</android.support.constraint.ConstraintLayout>